# Cristina-s-Birthday

./: .gitignore  CMakeLists.txt
include/: Global.hpp  Handler.hpp  JSONTools.hpp  RandomPropGenerator.hpp  SettingsTools.hpp  StateMachine.hpp
include/Debug/: Stream.hpp
include/Game/: Animation.hpp  Cinematics.hpp  Enemy.hpp  Entity.hpp  Map.hpp  Player.hpp  UI.hpp
include/Managers/: AnimationsManager.hpp  EnemiesManager.hpp  EntitiesManager.hpp  EntitiesManager.inl  TextureManager.hpp
include/States/: BaseState.hpp  GameState.hpp  IntroState.hpp  MenuState.hpp
src/: Handler.cpp  StateMachine.cpp  main.cpp
src/Game/: Cinematics.cpp  Enemy.cpp  Entity.cpp  Map.cpp  Player.cpp  UI.cpp
src/Managers/: AnimationsManager.cpp  EnemiesManager.cpp
src/States/: BaseState.cpp  GameState.cpp  IntroState.cpp  MenuState.cpp
